# Meeting_AI_Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_GSUC_SSO.md  docker-compose.yaml  main.py  main_secure.py  meeting_agent.db  meeting_agent.db.backup  pyproject.toml  requirements.txt  test_quick.py  test_quick_new_apis.py  worker.py
AI参考文件夹/: README.md  参考.txt
config/: development.yaml  development.yaml.example  production.yaml.example  test.yaml  test.yaml.example
docs/: API_DOCS_REORGANIZATION.md  API_DOCS_REORGANIZATION_SUMMARY.md  API_QUICK_REFERENCE.md  API_RESPONSE_EXAMPLES.md  ARTIFACT_ASYNC_API_REFERENCE.md  ARTIFACT_ASYNC_CLARIFICATIONS.md  ARTIFACT_ASYNC_GENERATION_GUIDE.md  ARTIFACT_DISPLAY_NAME_GUIDE.md  ARTIFACT_PROMPT_STORAGE_GUIDE.md  ARTIFACT_TEMPLATE_USAGE_GUIDE.md  ARTIFACT_VERSION_BY_NAME.md  AUDIO_DURATION_AND_LANGUAGE_GUIDE.md  AUDIO_DURATION_FIELD_GUIDE.md  BACKEND_API_INFO.md  DELETE_ARTIFACT_FRONTEND_GUIDE.md  DOCUMENTATION_ORGANIZATION.md  ERROR_CODE_IMPLEMENTATION_GUIDE.md  ERROR_CODE_QUICK_REFERENCE.md  FRONTEND_API_GAPS_AND_TODOS.md  FRONTEND_DEVELOPMENT_GUIDE.md  FRONTEND_DOCS_COMPLETION_SUMMARY.md  FRONTEND_DOCS_FINAL_SUMMARY.md  FRONTEND_DOCS_FINAL_UPDATE.md  FRONTEND_DOCS_INDEX.md  FRONTEND_EDIT_GUIDE.md  FRONTEND_FEATURE_CHECKLIST.md  FRONTEND_FEATURE_STATUS_UPDATE.md  FRONTEND_IMPLEMENTATION_ROADMAP.md  FRONTEND_MISSING_DETAILS.md  FRONTEND_PROGRESS_GUIDE.md  FRONTEND_QUICK_REFERENCE.md  FRONTEND_TYPES_UPDATE_SUMMARY.md  FRONTEND_USER_WORKFLOW.md  GEMINI_MODEL_INFO.md  GENERATE_ARTIFACT_DEBUG_GUIDE.md  GSUC_AUTO_RETRY_GUIDE.md  GSUC_CALLBACK_FIX.md  GSUC_FIELD_MAPPING.md  GSUC_SSO_FAQ.md  GSUC_SSO_SECURITY_ANALYSIS.md  (+62 more)
frontend/: Dockerfile  README.md  env.example  eslint.config.js  package-lock.json  package.json  vite.config.ts
scripts/: add_detailed_summary_template.py  add_speaker_mapping_for_old_task.py  analyze_missing_states.py  audit_ownership_checks.py  auth_helper.py  check_artifact_details.py  check_artifact_prompts.py  check_artifact_speaker_names.py  check_artifact_state.py  check_artifacts_in_db.py  check_config.py  check_db_folders.py  check_db_status.py  check_db_tables.py  check_failed_task.py  check_folder_tasks.py  check_folders_api.py  check_generate_request_logs.py  (+192 more)
(+324 files in other folders)
